--- a/restaurant/app/views/users/_form.html.erb
+++ b/restaurant/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for user, :html => { :class => "form-horizontal user" } ,remote: true  do |f| %>
+<%= form_for [user], :html => { :class => "form-horizontal user" } ,remote: true  do |f| %>
 
    <div id="error_list">
     <%= render :partial => 'error_list' ,locals: {user: user} %>
