--- a/restaurant/app/views/users/index.html.erb
+++ b/restaurant/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = User -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%=t '.title', :default => 'Restaurants' %></h1>
 </div>
 <div id="list_of_user">
    <%= render partial: "list_of_users", locals: { users: User.all } %>
